--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Eggward_Han
-subtitle:爱游戏的码农
-description:一个阴暗的小角落
+subtitle: 爱玩儿的码农
+description: 一个阴暗的小角落
 author: Eggward
 language:
 timezone:
@@ -77,5 +77,5 @@ theme: archer
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:git
-  branch:master
+  type: git
+  branch: master
